--- a/src/main/resources/com/example/btl_35/viewController/gui32v2.fxml
+++ b/src/main/resources/com/example/btl_35/viewController/gui32v2.fxml
@@ -17,7 +17,6 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.web.WebView?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="667.0" prefWidth="861.0" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.btl_35.viewController.gui32v2">
    <children>
@@ -159,6 +158,11 @@
                         <Label layoutX="46.0" layoutY="77.0" style="-fx-font-family: arial; -fx-font-size: 20;" text="Grade" />
                      </children>
                   </AnchorPane>
+                  <Button fx:id="replay" layoutX="634.0" layoutY="413.0" mnemonicParsing="false" onAction="#replayAction" style="-fx-background-color: red; -fx-font-family: arial; -fx-font-size: 20;" text="Replay" textFill="WHITE" visible="false">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
                   <Button fx:id="deleteimage" layoutX="725.0" layoutY="539.0" mnemonicParsing="false" onAction="#deleteimage1" style="-fx-background-color: #3399FF; -fx-font-family: arial; -fx-font-size: 20;" text="Delete" textFill="WHITE" AnchorPane.rightAnchor="30.0">
                      <font>
                         <Font size="14.0" />
@@ -175,7 +179,6 @@
                   <TextField fx:id="selectedcategory2" editable="false" layoutX="266.0" layoutY="86.0" style="-fx-font-size: 16; -fx-font-family: arial;" AnchorPane.leftAnchor="266.0" AnchorPane.rightAnchor="380.0" />
                   <MediaView fx:id="preview" fitHeight="180.0" fitWidth="320.0" layoutX="272.0" layoutY="277.0" />
                   <ImageView fx:id="imageview" fitHeight="180.0" fitWidth="320.0" layoutX="272.0" layoutY="277.0" pickOnBounds="true" preserveRatio="true" />
-                  <WebView fx:id="gifview" layoutX="14.0" layoutY="277.0" prefHeight="180.0" prefWidth="238.0" />
                </children>
             </AnchorPane>
         </content>
