--- a/src/main/resources/com/example/btl_35/viewController/guiquestion2.fxml
+++ b/src/main/resources/com/example/btl_35/viewController/guiquestion2.fxml
@@ -8,12 +8,16 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.web.WebView?>
 
 <AnchorPane fx:id="parentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="391.0" prefWidth="703.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.btl_35.viewController.guiquestion2">
     <children>
         <AnchorPane layoutX="148.0" layoutY="21.0" prefHeight="370.0" prefWidth="544.0" style="-fx-background-color: e7f3f5;" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="147.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="6.0">
             <children>
+            <Button fx:id="replay" layoutX="349.0" layoutY="208.0" mnemonicParsing="false" onAction="#replayAction" style="-fx-background-color: red; -fx-font-family: arial; -fx-font-size: 20;" text="Replay" textFill="WHITE" visible="false">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
                 <Label fx:id="questionContent" layoutX="14.0" layoutY="14.0" style="-fx-font-family: arial; -fx-font-size: 16;" text="QuestionContent">
                     <font>
                         <Font size="13.0" />
@@ -24,7 +28,6 @@
                 <CheckBox fx:id="answer2" layoutX="33.0" layoutY="301.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="434.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="B" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" />
                 <CheckBox fx:id="answer3" layoutX="33.0" layoutY="344.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="434.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="C" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" />
             <MediaView fx:id="mediaView" fitHeight="180.0" fitWidth="320.0" layoutX="22.0" layoutY="73.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="216.0" AnchorPane.topAnchor="73.0" />
-            <WebView fx:id="gifView" layoutX="14.0" layoutY="73.0" prefHeight="180.0" prefWidth="320.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="216.0" AnchorPane.topAnchor="73.0" />
             </children>
         </AnchorPane>
         <AnchorPane layoutX="12.0" layoutY="31.0" prefHeight="194.0" prefWidth="121.0" style="-fx-border-color: #EEEEEE; -fx-background-color: white;">
