--- a/src/main/resources/com/example/btl_35/viewController/guiquestion2.fxml
+++ b/src/main/resources/com/example/btl_35/viewController/guiquestion2.fxml
@@ -24,16 +24,16 @@
                     </font>
                 </Label>
             <ImageView fx:id="imageView" fitHeight="180.0" fitWidth="320.0" layoutX="22.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="216.0" AnchorPane.topAnchor="73.0" />
-                <CheckBox fx:id="answer1" layoutX="33.0" layoutY="269.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="434.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="A" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" />
-                <CheckBox fx:id="answer2" layoutX="33.0" layoutY="301.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="434.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="B" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" />
-                <CheckBox fx:id="answer3" layoutX="33.0" layoutY="344.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="434.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="C" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" />
+                <CheckBox fx:id="answer1" layoutX="33.0" layoutY="269.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="A" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="20.0" />
+                <CheckBox fx:id="answer2" layoutX="33.0" layoutY="301.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="B" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="20.0" />
+                <CheckBox fx:id="answer3" layoutX="33.0" layoutY="344.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="C" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="20.0" />
             <MediaView fx:id="mediaView" fitHeight="180.0" fitWidth="320.0" layoutX="22.0" layoutY="73.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="216.0" AnchorPane.topAnchor="73.0" />
+            <CheckBox fx:id="answer4" layoutX="30.0" layoutY="330.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="D" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="20.0" />
             </children>
         </AnchorPane>
         <AnchorPane layoutX="12.0" layoutY="31.0" prefHeight="194.0" prefWidth="121.0" style="-fx-border-color: #EEEEEE; -fx-background-color: white;">
             <children>
                 <Label layoutX="8.0" layoutY="117.0" style="-fx-font-family: arial;" text="Marked out of 1.00 " />
-                <Button layoutX="13.0" layoutY="137.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="94.0" style="-fx-font-family: arial; -fx-background-color: white; -fx-font-size: 12;" text="Flag question" />
             <HBox alignment="CENTER" layoutX="1.0" layoutY="14.0" prefHeight="44.0" prefWidth="122.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
                <children>
                       <Label style="-fx-font-family: arial; -fx-font-size: 15;" text="Question " textFill="RED">
@@ -48,6 +48,7 @@
                       </Label>
                </children>
             </HBox>
+            <Label layoutX="9.0" layoutY="82.0" prefHeight="30.0" prefWidth="103.0" style="-fx-font-family: arial;" text=" Not yet answered" />
             </children>
         </AnchorPane>
     </children>
