--- a/src/main/resources/com/example/btl_35/viewController/guiquestion4.fxml
+++ b/src/main/resources/com/example/btl_35/viewController/guiquestion4.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
@@ -8,25 +9,30 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="parentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="891.0" prefWidth="703.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.btl_35.viewController.guiquestion4">
+<AnchorPane fx:id="parentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="844.0" prefWidth="703.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.btl_35.viewController.guiquestion4">
    <children>
-      <AnchorPane layoutX="147.0" layoutY="6.0" prefHeight="551.0" prefWidth="550.0" style="-fx-background-color: e7f3f5;" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="147.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="6.0">
+      <AnchorPane layoutX="147.0" layoutY="6.0" prefHeight="836.0" prefWidth="550.0" style="-fx-background-color: e7f3f5;" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="147.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="6.0">
          <children>
             <Label fx:id="questionContent" layoutX="14.0" layoutY="14.0" style="-fx-font-family: arial; -fx-font-size: 16;" text="QuestionContent">
                <font>
                   <Font size="13.0" />
                </font>
             </Label>
-            <CheckBox fx:id="answer1" layoutX="14.0" layoutY="60.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="A" AnchorPane.bottomAnchor="592.0" AnchorPane.leftAnchor="14.0" />
-            <CheckBox fx:id="answer2" layoutX="14.0" layoutY="202.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="B" AnchorPane.bottomAnchor="450.0" AnchorPane.leftAnchor="14.0" />
-            <CheckBox fx:id="answer3" layoutX="14.0" layoutY="363.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="C" AnchorPane.bottomAnchor="289.0" AnchorPane.leftAnchor="14.0" />
-            <CheckBox fx:id="answer4" layoutX="14.0" layoutY="508.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="Khoản phí dùng để trang trải chi phí phát hành hợp đồng bảo hiểm, chi phí thẩm định bảo hiểm, chi phí kiểm tra y tế, chi hoa hồng đại lý và chi phí khác." AnchorPane.bottomAnchor="144.0" AnchorPane.leftAnchor="14.0" />
-            <ImageView fx:id="image1" fitHeight="108.0" fitWidth="200.0" layoutX="68.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="image2" fitHeight="108.0" fitWidth="200.0" layoutX="59.0" layoutY="440.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="image3" fitHeight="108.0" fitWidth="200.0" layoutX="59.0" layoutY="597.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="image4" fitHeight="108.0" fitWidth="200.0" layoutX="59.0" layoutY="750.0" pickOnBounds="true" preserveRatio="true" />
+            <CheckBox fx:id="answer1" layoutX="14.0" layoutY="60.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="A" AnchorPane.bottomAnchor="546.8" AnchorPane.leftAnchor="20.0" />
+            <CheckBox fx:id="answer2" layoutX="14.0" layoutY="202.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="B" AnchorPane.bottomAnchor="406.8" AnchorPane.leftAnchor="20.0" />
+            <CheckBox fx:id="answer3" layoutX="14.0" layoutY="363.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="C" AnchorPane.bottomAnchor="266.8" AnchorPane.leftAnchor="20.0" />
+            <CheckBox fx:id="answer4" layoutX="14.0" layoutY="508.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="1000.0" style="-fx-font-family: arial; -fx-font-size: 14;" text="Khoản phí dùng để trang trải chi phí phát hành hợp đồng bảo hiểm, chi phí thẩm định bảo hiểm, chi phí kiểm tra y tế, chi hoa hồng đại lý và chi phí khác." AnchorPane.bottomAnchor="126.8" AnchorPane.leftAnchor="20.0" />
+            <ImageView fx:id="image1" fitHeight="108.0" fitWidth="192.0" layoutX="45.0" layoutY="289.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="440.0" AnchorPane.leftAnchor="45.0" />
+            <ImageView fx:id="image2" fitHeight="108.0" fitWidth="192.0" layoutX="45.0" layoutY="429.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="45.0" />
+            <ImageView fx:id="image3" fitHeight="108.0" fitWidth="192.0" layoutX="45.0" layoutY="569.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="160.0" AnchorPane.leftAnchor="45.0" />
+            <ImageView fx:id="image4" fitHeight="108.0" fitWidth="192.0" layoutX="39.0" layoutY="709.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="45.0" />
             <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="277.0" layoutX="45.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true" />
-            <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="200.0" layoutX="92.0" layoutY="32.0" />
+            <MediaView fx:id="mediaView" fitHeight="180.0" fitWidth="320.0" layoutX="14.0" layoutY="66.0" AnchorPane.bottomAnchor="586.0" AnchorPane.leftAnchor="14.0" />
+            <Button fx:id="replay" layoutX="355.0" layoutY="189.0" mnemonicParsing="false" onAction="#replayAction" style="-fx-background-color: red; -fx-font-family: arial; -fx-font-size: 20;" text="Replay" textFill="WHITE" visible="false">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
       <AnchorPane layoutX="14.0" layoutY="18.0" prefHeight="174.0" prefWidth="112.0" style="-fx-border-color: #EEEEEE; -fx-background-color: white;">
